version/0.1/_sources/methods/index.rst.txt
.. currentmodule:: ansys.motorcad

API reference
=============

Motor-CAD API
------------

The ``MotorCAD`` object is used by default for PyMotorCAD scripting.
For descriptions of this object's single class and its many methods,
see :ref:`ref_MotorCAD_object`.

Motor-CAD compatibility API
--------------------------

The ``MotorCADCompatibility`` object is used for running old ActiveX
scripts. For information on backwards compatibility, see
:ref:`ref_backwards_compatibility`. For descriptions of this
object, its single class, and its many methods, see
:ref:`ref_MotorCADCompatibility_object`.

.. note::
   In addition to giving the available methods, their replacement functions
   have been commented.

.. toctree::
   :maxdepth: 1
   :hidden:

   MotorCAD_object
   MotorCADCompatibility_object
